update papers / icon

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -282,6 +282,26 @@ body:hover .visually-hidden button {
   .fa-xing-square {
     color: $xing-color;
   }
+
+  .fa-book {
+    color: $rednote-color;
+  }
+
+  .fa-map-marker {
+    color: $location-color;
+  }
+
+  .fa-envelope {
+    color: $email-color;
+  }
+
+  .fa-graduation-cap {
+    color: $scholar-color;
+  }
+
+  .fa-file {
+    color: $resume-color;
+  }
 }
 
 
