--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -91,6 +91,11 @@ $vimeo-color                : #1ab7ea;
 $vine-color                 : #00bf8f;
 $youtube-color              : #bb0000;
 $xing-color                 : #006567;
+$rednote-color              : #ff2442;
+$location-color             : #ff6b35;
+$email-color                : #0077be;
+$scholar-color              : #4285f4;
+$resume-color               : #2e7d32;
 
 
 /* links */
