--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,11 @@ layout: compress
     </div>
 
     {% include scripts.html %}
-    
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=jSbPrdJ6tOFiqDd9kqLOLv1TqqzAcC7_dGkXD9rOP9k"></script>
+
   </body>
 </html>
 
 
 <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=HkkIFPk82AocJNo3RSU52QgAyGUJ43dnunhB9kBumfc&cl=ffffff&w=360"></script> -->
+<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=jSbPrdJ6tOFiqDd9kqLOLv1TqqzAcC7_dGkXD9rOP9k&cl=ffffff&w=a"></script> -->
