--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -121,8 +121,8 @@
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
       {% endif %}
-      {% if author.resume %}
-        <a href="{{ author.resume }}"><i class="fa fa-fw fa-file"></i> Resume</a>
+      {% if author.CV %}
+        <a href="{{ author.CV }}"><i class="fa fa-fw fa-file"></i> CV</a>
 {% endif %}
     </ul>
       <div class="author__urls_sm">
@@ -222,8 +222,8 @@
       {% if author.wikipedia %}
         <a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i></a>
       {% endif %}
-      {% if author.resume %}
-        <a href="{{ author.resume }}"><i class="fa fa-fw fa-file"></i></a>
+      {% if author.CV %}
+        <a href="{{ author.CV }}"><i class="fa fa-fw fa-file"></i></a>
       {% endif %}
     </div>
   </div>
