--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -95,7 +95,7 @@ $rednote-color              : #ff2442;
 $location-color             : #ff6b35;
 $email-color                : #0077be;
 $scholar-color              : #4285f4;
-$resume-color               : #2e7d32;
+$CV-color               : #2e7d32;
 
 
 /* links */
